💥 struc: Refatoração geral da estrutura do projeto com correções gramaticais e adição do suporte a automações com CI/CD

--- a/source/tsconfig.json
+++ b/source/tsconfig.json
@@ -4,8 +4,9 @@
     "jsxFactory": "Preact.h",
     "jsxFragmentFactory": "Preact.Fragment",
 
+    "allowImportingTsExtensions": true,
     "esModuleInterop": true,
     "noEmit": true,
-    "allowImportingTsExtensions": true
+    "strict": true
   }
 }
