--- a/source/package.json
+++ b/source/package.json
@@ -14,7 +14,7 @@
     "@types/feather-icons": "latest"
   },
   "scripts": {
-    "serve": "ts-node worker.ts serve",
-    "build": "ts-node worker.ts build"
+    "serve": "ts-node backend/worker.ts serve",
+    "build": "ts-node backend/worker.ts build"
   }
 }
