--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,19 @@
 name: Build and Deploy
 
 on:
+  push:
+    branches: [main]
+    
   workflow_dispatch:
 
 permissions:
-  pages: write
   contents: read
+  pages: write
   id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: false
 
 jobs:
   build:
@@ -16,34 +23,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup NodeJS
+      - name: Setup NodeJ
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
+  
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
 
       - run: cd ./source
       - run: npm ci
       - run: npm run build
+    
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./dist
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     
     environment:
       name: github-pages
       url: ${{steps.deployment.outputs.page_url}}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup
-        uses: actions/configure-pages@v4
-
-      - name: Upload
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./dist
-          
       - name: Deploy
         id: deployment
         uses: actions/deploy-pages@v4
