--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,6 @@ name: Build and Deploy
 on:
   push:
     branches: [main]
-    
-  workflow_dispatch:
 
 permissions:
   contents: read
@@ -32,7 +30,7 @@ jobs:
         uses: actions/configure-pages@v4
 
       - run: cd ./source
-      - run: npm ci
+      - run: npm install
       - run: npm run build
     
       - name: Upload artifact
