--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,10 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - run: cd ./source
-      - run: npm install
-      - run: npm run build
+      - run: |
+          cd ./source
+          npm ci
+          npm run build
     
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
