🧩 tests: Experimentos com as automações com CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
 
       - run: |
           cd ./source
-          npm ci
+          npm install --package-lock=false
           npm run build
     
       - name: Upload artifact
