🧩 tests: Experimentos com as automações com CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 name: Build and Deploy
 
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -21,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup NodeJ
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
