--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,13 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: pages
-  cancel-in-progress: false
-
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
 
     steps:
       - name: Checkout
@@ -28,7 +28,8 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - run: |
+      - name: Build website
+        run: |
           cd ./source
           npm install --package-lock=false
           npm run build
@@ -38,15 +39,6 @@ jobs:
         with:
           path: ./dist
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    
-    environment:
-      name: github-pages
-      url: ${{steps.deployment.outputs.page_url}}
-
-    steps:
-      - name: Deploy
+      - name: Deploy Pages
         id: deployment
         uses: actions/deploy-pages@v4
