--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,8 @@ permissions:
   id-token: write
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-
-    environment:
-      name: github-pages
-      url: ${{steps.deployment.outputs.page_url}}
 
     steps:
       - name: Checkout
@@ -24,17 +20,24 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-  
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
 
       - name: Build website
         run: |
           cd ./source
           npm install --package-lock=false
           npm run build
-          cd ..
-    
+
+  deploy:
+    runs-on: ubuntu-latest
+
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
+
+    steps:
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
