🎯 feats: Adição do suporte ao redirecionamento a subrotas de websites externos

--- a/source/package.json
+++ b/source/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "serve": "ts-node backend/worker.ts serve",
-    "build": "ts-node backend/worker.ts build"
+    "build": "ts-node backend/worker.ts build",
+    "route": "ts-node backend/worker.ts route"
   }
 }
