🎯 feats: Integração do redirecionamento a subrotas externas com as automações com CI/CD

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
           cd ./source
           npm install --package-lock=false
           npm run build
+          npm run route
     
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
