🎯 feats: Adição do suporte a parâmetros de compartilhamento em redes sociais no sistema de subrotas externas

--- a/source/tsconfig.json
+++ b/source/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "compilerOptions": {
+    "lib": ["ESNext"],
+
     "jsx": "preserve",
     "jsxFactory": "Preact.h",
     "jsxFragmentFactory": "Preact.Fragment",
 
-    "allowImportingTsExtensions": true,
-    "esModuleInterop": true,
+    "strict": true,
     "noEmit": true,
-    "strict": true
+    "esModuleInterop": true,
+    "allowImportingTsExtensions": true,
   }
 }
