❤️ love: The Kett Workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
-
-      - name: Setup Dart
-        uses: dart-lang/setup-dart@v1
   
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -40,6 +37,7 @@ jobs:
           npm install --package-lock=false
           npm run build
           npm run route
+          cp -r ../extra ./dist
     
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
