--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           npm run build
           npm run route
           cd ..
-          cp -r ./extra ./dist
+          cp -r ./extra/. ./dist/
     
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
